fix jumping email form

--- a/style.scss
+++ b/style.scss
@@ -932,6 +932,7 @@ nav {
   right:-500px;
   height: 100%;
   background-color: #fff;
+  overflow-y: scroll;
   // padding-left: 30px;
   // padding-right: 30px;
   border-left: 5px solid $lexOrange;
@@ -2077,7 +2078,7 @@ box-shadow: -10px -7px 12px -11px rgba(0,0,0,0.75);
 **/
 
 #mc_embed_signup {
-  position: relative;
+  position: absolute;
   border-radius: 4px;
   border: 4px solid $lexOrange;
   box-shadow: $close-shadow;
@@ -2087,11 +2088,18 @@ box-shadow: -10px -7px 12px -11px rgba(0,0,0,0.75);
   clear:left;
   font:14px Helvetica,Arial,sans-serif;
   width:40%;
+  top: 20px;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 220px;
   @include wide-laptop {
-    width:70%;
+    width:63%;
+    transform: translateX(-35%);
+  }
+  @include mini-pad {
+   transform: translateX(-50%);
+  }
+  @include lg-mini-mobile {
+    transform: translateX(-56%);
   }
  #mc-embedded-subscribe {
   background-color: $lexOrange;
